Client - Support user search
